objects/OSM_Approval_Flow_Account_Groups__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Group_Name__c</fullName>
        <label>Account Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU_One_Time__c</fullName>
        <label>Products SKU One Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Products SKU Every Time</label>
        <type>TextArea</type>
    </fields>
    <label>OSM Approval Flow Account Groups</label>
    <listViews>
        <fullName>Full_Detail</fullName>
        <columns>Account_Group_Name__c</columns>
        <columns>Product_SKU__c</columns>
        <columns>Product_SKU_One_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full Detail</label>
        <language>en_US</language>
    </listViews>
</CustomObject>